add vagrant and virtualbox

--- a/roles/desktop-setup/tasks/main.yaml
+++ b/roles/desktop-setup/tasks/main.yaml
@@ -17,6 +17,15 @@
   with_items:
     - vlc
 
+- name: Install development applications
+  apt:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - vagrant
+    - virtualbox
+
+
 - name: setup bashrc and vimrc
   copy:
     src: /home/socen/development/ansible/roles/files/{{ item }}
